--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--# set var="title" value="PoniSonus - Pony Sound Generator" -->
-<!--# set var="description" value="A tool that can be used to generate erotic sounds of your favorite pony for whatever degenerate reasons you may have, you disgusting pervert." -->
+<!--# set var="description" value="A tool that can be used to generate sound files of your favorite pony for whatever degenerate reasons you may have, you disgusting pervert." -->
 <!--# set var="keywords" value="pony,clop,sounds,erotic,horse,my little pony,friendship is magic,twilight sparkle" -->
 <html lang="en" prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb#" 🦄 🐎🐱>
 	<head>
@@ -40,7 +40,7 @@
 		<h1><!--# echo var="title" --></h1>
 		<p><!--# echo var="description" --></p>
 		<p>
-			This site is still a work in progress, please continue to check back.  To see current progress, check out the <a href="//github.com/CorpulentBrony/ponison.us" rel="external noopener" target="_blank" type="text/html">repository on GitHub</a> and the <a href="//trello.com/b/5QZzxXFt/ponisonus" rel="external noopener" target="_blank" type="text/html">Trello board</a>
+			To see current progress, check out the <a href="//github.com/CorpulentBrony/ponison.us" rel="external noopener" target="_blank" type="text/html">repository on GitHub</a> and the <a href="//trello.com/b/5QZzxXFt/ponisonus" rel="external noopener" target="_blank" type="text/html">Trello board</a>.  Please keep checking back.
 		</p>
 		<p>
 			For now, you can at least listen to the voice of best pony:
