--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<head>
 		<meta charset="utf-8">
 		<link href="https://ponison.us/" rel="canonical self" type="text/html">
+		<!-- preloads -->
+		<link as="script" href="/js/index.js" rel="preload" type="application/javascript">
 		<link as="image" href="//www.gstatic.com/psa/static/1.gif" rel="preload" type="image/gif">
 		<!-- <link as="script" href="//www.google-analytics.com/analytics.js" rel="preload" type="application/javascript"> -->
 		<!-- <link href="/manifest.jsonmanifest" rel="manifest" type="application/manifest+json"> -->
@@ -25,6 +27,7 @@
 		<meta content="<!--# echo var="description" -->" itemprop="description">
 		<meta content="<!--# echo var="keywords" -->" name="keywords">
 		<title><!--# echo var="title" --></title>
+		<!-- remember to disable nonce in config file once we are done using inline styles/scripts -->
 		<style nonce="<!--# echo var="nonce" -->">
 			.ponisonus-inline-list {
 				display: inline-block;
@@ -34,74 +37,111 @@
 			.ponisonus-inline-list > li { display: inline-block; }
 			.ponisonus-inline-list > li::before { content: "|\0a"; }
 			.ponisonus-inline-list > li:first-child::before { content: "\0a"; }
+
+			#div-sound-types {
+				display: flex;
+				flex-wrap: wrap;
+			}
+			#div-sound-types > span { padding: 0 0.5rem; }
 		</style>
+		<script async defer src="/js/index.js"></script>
 	</head>
 	<body>
-		<h1><!--# echo var="title" --></h1>
-		<p><!--# echo var="description" --></p>
-		<p>
-			To see current progress, check out the <a href="//github.com/CorpulentBrony/ponison.us" rel="external noopener" target="_blank" type="text/html">repository on GitHub</a> and the <a href="//trello.com/b/5QZzxXFt/ponisonus" rel="external noopener" target="_blank" type="text/html">Trello board</a>.  Please keep checking back.
-		</p>
-		<p>
-			For now, you can at least listen to the voice of <a href="//horse.best" target="_blank" type="text/html">best pony</a>:
-			<ul>
-				<li>
-					Season 1:
-					<ul class="ponisonus-inline-list">
-						<li><a href="//www.youtube.com/watch?v=r-iTJkKZaKE" rel="external noopener" target="_blank" type="text/html">Watch on YouTube</a></li>
-						<li><a href="//media.pone.tube/twivoice/s1.mp3" rel="external noopener" target="_blank" type="audio/mpeg">Download MP3</a></li>
-					</ul>
-				</li>
-				<li>
-					Season 2:
-					<ul class="ponisonus-inline-list">
-						<li><a href="//www.dailymotion.com/video/x6gh6nv" rel="external noopener" target="_blank" type="text/html">Watch on DailyMotion</a></li>
-						<li><a href="//media.pone.tube/twivoice/s2.mp3" rel="external noopener" target="_blank" type="audio/mpeg">Download MP3</a></li>
-					</ul>
-				</li>
-				<li>
-					Season 3:
-					<ul class="ponisonus-inline-list">
-						<li><a href="//www.youtube.com/watch?v=B2Of7jztD6g" rel="external noopener" target="_blank" type="text/html">Watch on YouTube</a></li>
-						<li><a href="//media.pone.tube/twivoice/s3.mp3" rel="external noopener" target="_blank" type="audio/mpeg">Download MP3</a></li>
-						<li><a href="//media.pone.tube/twivoice/s3.ogg" rel="external noopener" target="_blank" type="audio/ogg">Download OGG</a></li>
-					</ul>
-				</li>
-				<li>Season 4: Coming soon!  I swear</li>
-				<li>
-					Equestria Girls (movie):
-					<ul class="ponisonus-inline-list">
-						<li><a href="//www.youtube.com/watch?v=xfCNED1OQFI" rel="external noopener" target="_blank" type="text/html">Watch on YouTube</a></li>
-						<li><a href="//media.pone.tube/twivoice/eqg1.mp3" rel="external noopener" target="_blank" type="audio/mpeg">Download MP3</a></li>
-					</ul>
-				</li>
-				<li>My Little Pony: The Movie: <a href="//media.pone.tube/twivoice/movie.mp3" rel="external noopener" target="_blank" type="audio/mpeg">Download MP3</a></li>
-			</ul>
-		</p>
-		<button id="button-test" type="button">Test</button>
-		<script nonce="<!--# echo var="nonce" -->">
-			"use strict";
-
-			(function index() {
-				const isDocumentLoaded = new window.Promise((resolve) => {
-					if (window.document.readyState === "loading")
-						window.document.addEventListener("DOMContentLoaded", resolve, false);
-					else
-						resolve();
-				});
-
-				function buttonTestOnClick() {
-					fetch("//api.ponison.us/index.php", { body: JSON.stringify({ requestType: "list" }), headers: { ["Content-Type"]: "application/json" }, method: "POST" })
-						.then((response) => response.text())
-						.then(console.log)
-						.catch(console.error);
-				}
-
-				(async function onDocumentLoad() {
-					await isDocumentLoaded;
-					window.document.getElementById("button-test").addEventListener("click", buttonTestOnClick, false);
-				})().catch(console.error);
-			})();
-		</script>
+		<header>
+			<h1><!--# echo var="title" --></h1>
+			<p><!--# echo var="description" --></p>
+			<p>
+				To see current progress, check out the <a href="//github.com/CorpulentBrony/ponison.us" rel="external noopener" target="_blank" type="text/html">repository on GitHub</a> and the <a href="//trello.com/b/5QZzxXFt/ponisonus" rel="external noopener" target="_blank" type="text/html">Trello board</a>.  Please keep checking back.
+			</p>
+		</header>
+		<section>
+			<p>
+				<header>
+					For now, you can at least listen to the voice of <a href="//horse.best" target="_blank" type="text/html">best pony</a>:
+				</header>
+				<ul>
+					<li>
+						Season 1:
+						<ul class="ponisonus-inline-list">
+							<li><a href="//www.youtube.com/watch?v=r-iTJkKZaKE" rel="external noopener" target="_blank" type="text/html">Watch on YouTube</a></li>
+							<li><a href="//media.pone.tube/twivoice/s1.mp3" rel="external noopener" target="_blank" type="audio/mpeg">Download MP3</a></li>
+						</ul>
+					</li>
+					<li>
+						Season 2:
+						<ul class="ponisonus-inline-list">
+							<li><a href="//www.dailymotion.com/video/x6gh6nv" rel="external noopener" target="_blank" type="text/html">Watch on DailyMotion</a></li>
+							<li><a href="//media.pone.tube/twivoice/s2.mp3" rel="external noopener" target="_blank" type="audio/mpeg">Download MP3</a></li>
+						</ul>
+					</li>
+					<li>
+						Season 3:
+						<ul class="ponisonus-inline-list">
+							<li><a href="//www.youtube.com/watch?v=B2Of7jztD6g" rel="external noopener" target="_blank" type="text/html">Watch on YouTube</a></li>
+							<li><a href="//media.pone.tube/twivoice/s3.mp3" rel="external noopener" target="_blank" type="audio/mpeg">Download MP3</a></li>
+							<li><a href="//media.pone.tube/twivoice/s3.ogg" rel="external noopener" target="_blank" type="audio/ogg">Download OGG</a></li>
+						</ul>
+					</li>
+					<li>
+						Season 4:
+						<ul class="ponisonus-inline-list">
+							<li><a href="//www.youtube.com/watch?v=zhPoLBpx8pg" rel="external noopener" target="_blank" type="text/html">Watch on YouTube</a></li>
+							<li><a href="//media.pone.tube/twivoice/s4.mp3" rel="external noopener" target="_blank" type="audio/mpeg">Download MP3</a></li>
+							<li><a href="//media.pone.tube/twivoice/s4.ogg" rel="external noopener" target="_blank" type="audio/ogg">Download OGG</a></li>
+						</ul>
+					</li>
+					<li>
+						Equestria Girls (movie):
+						<ul class="ponisonus-inline-list">
+							<li><a href="//www.youtube.com/watch?v=xfCNED1OQFI" rel="external noopener" target="_blank" type="text/html">Watch on YouTube</a></li>
+							<li><a href="//media.pone.tube/twivoice/eqg1.mp3" rel="external noopener" target="_blank" type="audio/mpeg">Download MP3</a></li>
+						</ul>
+					</li>
+					<li>My Little Pony: The Movie: <a href="//media.pone.tube/twivoice/movie.mp3" rel="external noopener" target="_blank" type="audio/mpeg">Download MP3</a></li>
+				</ul>
+			</p>
+		</section>
+		<section>
+			<header><h2>Testing Sandbox</h2></header>
+			<p>
+				Yeah, it's a bit unorthodox, but I'm going to be developing the app live, so don't expect anything here to actually <em>work</em> yet.
+			</p>
+			<p>
+				You can also <a href="/pony/" target="_blank" type="text/html">browse</a> the currently available sounds.
+			</p>
+			<!-- To prevent a call to the API client side on load, just load the file virtually from the server using an internal proxy into a JSON script object -->
+			<script id="script-list" type="application/json"><!--# include virtual="/list" --></script>
+		</section>
+		<form autocomplete="on" id="form-request" name="form-request">
+			<div>
+				<label for="select-ponies">Select a pony</label>
+				<select autocomplete="name" id="select-ponies" required></select>
+			</div>
+			<fieldset>
+				<legend>Select sound type(s)</legend>
+				<div id="div-sound-types">
+					If you see this message, then either you have JavaScript disabled or your browser is not supported.  Try the newest version of <a href="https://www.google.com/chrome/browser/" rel="external noopener" target="_blank" type="text/html">Chrome</a> or <a href="https://www.mozilla.org/firefox" rel="external noopener" target="_blank" type="text/html">Firefox</a>.
+				</div>
+			</fieldset>
+			<div>
+				<label for="input-desired-length-seconds">Desired length (estimate, seconds)</label>
+				<input id="input-desired-length-seconds" inputmode="numeric" max="3600" maxlength="4" min="1" required value="60">
+			</div>
+			<div>
+				<label for="input-min-delay-seconds">Min Delay Between Sounds (seconds)</label>
+				<input id="input-min-delay-seconds" inputmode="decimal" max="3600" maxlength="6" min="0" required step="0.1" value="5">
+			</div>
+			<div>
+				<label for="input-max-delay-seconds">Max Delay Between Sounds (seconds)</label>
+				<input id="input-max-delay-seconds" inputmode="decimal" max="3600" maxlength="6" min="0" required step="0.1" value="10">
+			</div>
+			<div>
+				<label for="select-output-format">Output Format</label>
+				<select id="select-output-format" required>
+					<option>mp3</option>
+				</select>
+			</div>
+			<button id="button-get-audio" required type="button">Get Audio</button>
+		</form>
 	</body>
 </html>
